kernel-tests/tests/snapshots/state_graphs__usb_enumeration_state_graph.snap
---
source: kernel-tests/tests/state_graphs.rs
expression: dot
---
digraph UsbEnumeration {
    compound=true
    node [color="deepskyblue4" style="rounded, filled" fillcolor="azure"]
    edge[color="red"]

    Entry[width=0.2 shape="circle" style="filled" fillcolor="black" label=""]
    Entry -> Powered

    Failed [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Failed</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
is_failed()<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    subgraph cluster_Enumerating {
        label = <
            <table cellborder="0" border="0">
                <tr><td>Enumerating</td></tr>
                <hr/>
                <tr><td align="left"><font point-size="10">
fail()<br ALIGN="LEFT"/>
                </font></td></tr>
            </table>
        >
        style = rounded
        Enumerating [shape="point" width="0"]

        Powered [label = <
            <table CELLBORDER="0" CELLPADDING="5" style="rounded">
                <tr><td><b>Powered</b></td></tr>
                <hr/>
                <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>slot_enabled(slot: u8)<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>
                </font></td></tr>
            </table>
        > margin=0 shape=none]
        SlotEnabled [label = <
            <table CELLBORDER="0" CELLPADDING="5" style="rounded">
                <tr><td><b>SlotEnabled</b></td></tr>
                <hr/>
                <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>addressed()<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>
                </font></td></tr>
            </table>
        > margin=0 shape=none]
        AddressAssigned [label = <
            <table CELLBORDER="0" CELLPADDING="5" style="rounded">
                <tr><td><b>AddressAssigned</b></td></tr>
                <hr/>
                <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>is_addressed()<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>
                </font></td></tr>
            </table>
        > margin=0 shape=none]
    }

    Powered -> SlotEnabled [label=" slot_enabled "]
    SlotEnabled -> AddressAssigned [label=" addressed "]
    Enumerating -> Failed [label=" fail " ltail="cluster_Enumerating"]
}
