kernel-tests/tests/snapshots/state_graphs__usb_transfer_state_graph.snap
---
source: kernel-tests/tests/state_graphs.rs
expression: dot
---
digraph UsbTransfer {
    compound=true
    node [color="deepskyblue4" style="rounded, filled" fillcolor="azure"]
    edge[color="red"]

    Entry[width=0.2 shape="circle" style="filled" fillcolor="black" label=""]
    Entry -> Idle

    Idle [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Idle</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
start()<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    InFlight [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>InFlight</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>complete()<br ALIGN="LEFT"/>fail()<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Complete [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Complete</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>is_complete()<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Failed [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Failed</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
is_failed()<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]

    Idle -> InFlight [label=" start "]
    InFlight -> Complete [label=" complete "]
    InFlight -> Failed [label=" fail "]
}
